# remote_serial

./: Cargo.toml  README.md  Xargo.toml
.cargo/: config
.github/workflows/: main.yml  release.yml  rust.yml
python/: client.py
src/: error.rs  main.rs
