[package]
name = "remote_serial"
version = "0.1.0"
authors = ["Kabir <jxwazxzhp@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.18.2", features = ["event-stream"] }
futures = "0.3.8"
mio-serial = "3.3.1"
serde_json = "1.0.60"
#serialport = "4.0.0"
structopt = "0.3.21"
tokio = { version = "0.2.1", features = ["full"] }
tokio-serial = "4.3.3"
tokio-util = { version = "0.3.1", features = ["codec"] }
