[package]
name = "remote_serial"
version = "1.0.1"
authors = ["Kabir <jxwazxzhp@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
crossterm = { version = "0.18.2", features = ["event-stream"] }
futures = "0.3.8"
mio-serial = "3.3.1"
serde_json = "1.0.60"
structopt = "0.3.21"
tokio = { version = "0.2.1", features = ["full"] }
tokio-serial = "4.3.3"
tokio-util = { version = "0.3.1", features = ["codec"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

