[package]
name = "remote_serial"
version = "1.0.9"
authors = ["Kabir <jxwazxzhp@126.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zhp-rs/remote_serial"
description = "remote connect to serial"
keywords = ["tokio", "remote", "serial", "usb", "cross"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
exclude = ["python", "Xargo.toml"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
crossterm = { version = "0.18.2", features = ["event-stream"] }
futures = "0.3.8"
local_ipaddress = "0.1.3"
structopt = "0.3.21"
tokio = { version = "0.2.1", features = ["fs", "net", "macros"] }
tokio-serial = { version = "4.3.3", default-features = false }
tokio-util = { version = "0.3.1", features = ["codec"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

